[package]
name = "mrktools"
version = "0.1.0"
authors = ["George Madrid <gmadrid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
argh = "0.1"
log = "0.4"
mktemp = "0.4"
num-traits = "0.2"
pretty_env_logger = "0.4"
printpdf = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "0.8", features = ["v4"] }
